--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1504,7 +1504,7 @@ set_src(GAME_SERVER GLOB_RECURSE src/game/server
   gamemodes/mod.h
   gamemodes/tdm.cpp
   gamemodes/tdm.h
-  gamesmodes/zomb.cpp
+  gamemodes/zomb.cpp
   gamemodes/zomb.h
   gameworld.cpp
   gameworld.h
