--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -125,7 +125,12 @@ jobs:
       if: contains(matrix.os, 'ubuntu')
       run: |
         sudo apt-get update -y
-        sudo apt-get install libfreetype6-dev libsdl2-dev libluajit-5.1-dev -y
+        sudo apt-get install libfreetype6-dev libsdl2-dev -y
+        cd other/luajit
+        sudo tar xvzf LuaJIT-2.0.5.tar.gz
+        sudo make
+        sudo make install
+        cd ../..
         cd bam
         ./make_unix.sh
 
@@ -133,7 +138,7 @@ jobs:
       if: contains(matrix.os, 'macOS')
       run: |
         brew update
-        brew install freetype sdl2 luajit
+        brew install freetype sdl2
         cd bam
         ./make_unix.sh
 
