--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -140,6 +140,12 @@ jobs:
       run: |
         brew update
         brew install freetype sdl2
+        cd other/luajit
+        sudo tar xvzf LuaJIT-2.0.5.tar.gz
+        cd LuaJIT-2.0.5
+        sudo make
+        sudo make install
+        cd ../../..
         cd bam
         ./make_unix.sh
 
